force-app/main/default/objects/KB_Global_Search_And_Replace__c/KB_Global_Search_And_Replace__c.object-meta.xml
<CustomObject>
    <label>KB Global Search And Replace</label>
    <nameField>
        <label>KB Global Search And Replace Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KB Global Search And Replace</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>