force-app/main/default/objects/KB_Global_Search_And_Replace__c/fields/Article_Type__c.field-meta.xml
<CustomField>
    <fullName>Article_Type__c</fullName>
    <label>Article Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>