force-app/main/default/objects/KB_Global_Search_And_Replace__c/fields/ArticleId__c.field-meta.xml
<CustomField>
    <fullName>ArticleId__c</fullName>
    <label>Article Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>