force-app/main/default/objects/KB_Global_Search_And_Replace__c/fields/ArticleNumber__c.field-meta.xml
<CustomField>
    <fullName>ArticleNumber__c</fullName>
    <label>Article Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>