force-app/main/default/objects/KB_Global_Search_And_Replace__c/fields/Exception_Comments__c.field-meta.xml
<CustomField>
    <fullName>Exception_Comments__c</fullName>
    <label>Exception Comments</label>
    <type>TextArea</type>
</CustomField>