force-app/main/default/objects/KB_Global_Search_And_Replace__c/fields/Field_Names__c.field-meta.xml
<CustomField>
    <fullName>Field_Names__c</fullName>
    <label>Field Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>