force-app/main/default/objects/KB_Global_Search_And_Replace__c/fields/IsMasterLanguage__c.field-meta.xml
<CustomField>
    <fullName>IsMasterLanguage__c</fullName>
    <label>IsMasterLanguage</label>
    <length>5</length>
    <type>Text</type>
</CustomField>