force-app/main/default/objects/KB_Global_Search_And_Replace__c/fields/KnowledgeArticleId__c.field-meta.xml
<CustomField>
    <fullName>KnowledgeArticleId__c</fullName>
    <label>Knowledge Article Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>