force-app/main/default/objects/KB_Global_Search_And_Replace__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <length>5</length>
    <type>Text</type>
</CustomField>