force-app/main/default/objects/KB_Global_Search_And_Replace__c/fields/PublishNewVersion__c.field-meta.xml
<CustomField>
    <fullName>PublishNewVersion__c</fullName>
    <label>PublishNewVersion</label>
    <length>5</length>
    <type>Text</type>
</CustomField>