force-app/main/default/objects/KB_Global_Search_And_Replace__c/fields/PublishStatus__c.field-meta.xml
<CustomField>
    <fullName>PublishStatus__c</fullName>
    <label>PublishStatus</label>
    <length>12</length>
    <type>Text</type>
</CustomField>