force-app/main/default/objects/KB_Global_Search_And_Replace__c/fields/Replacement_Channels__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Channels__c</fullName>
    <label>Replacement Channels</label>
    <length>4</length>
    <type>Text</type>
</CustomField>